[package]
name = "dockerlet"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["metastable-void"]
license = "Apache-2.0 OR MPL-2.0"
readme = "README.md"
repository = "https://github.com/metastable-void/dockerlet"
homepage = "https://github.com/metastable-void/dockerlet"
description = "Minimal Docker test-container helper: thin wrapper over bollard with a small feature set, intended as a lightweight alternative to testcontainers for projects with narrow Docker daemon needs."
keywords = ["docker", "testing", "container", "bollard", "test-fixtures"]
categories = ["development-tools::testing", "api-bindings"]

[dependencies]
bollard = { version = "0.20", default-features = false, features = ["pipe"] }
bytes = "1"
futures-util = { version = "0.3", default-features = false }
libc = "0.2"
thiserror = "2"
tokio = { version = "1", default-features = false, features = ["rt", "sync", "time", "net", "io-util"] }
tracing = "0.1"

[dev-dependencies]
tokio = { version = "1", default-features = false, features = ["macros", "rt"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1
panic = "abort"
overflow-checks = true
